--- a/KTaNE Tool/package.json
+++ b/KTaNE Tool/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host --port 8888",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
