--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: github-pages
-        path: ./publish
+        path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
