--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/configure-pages@v5
 
     - name: Upload published artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-pages-artifact@v3.0.1
       with:
         name: github-pages
         path: ./dist
@@ -42,14 +42,6 @@ jobs:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
     steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: .
-
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/upload-pages-artifact@v1
-        with: 
-          path: .
+        uses: actions/deploy-pages@v4
